# timelib

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac  timelib.pc.in
src/: parse_date.c  parse_date.re  timelib_config.h  timelib_config.h.in
